Finished joining and rough cleaning the fsq/yelp + ctyBks tables. And some bug fixes.

--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        " 'name': 'Bublr Bikes'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "'RU'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "2  330  330"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "9                     Mantova      IT                     bicincitta-mantova"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "CH         20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        " 'name': 'Bike Share Toronto'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "1  Limerick      IE     limerick"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "0  Wageningen      NL                cykl"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "13   Igoumenitsa      GR   easybike-igoumenitsa"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "6       Boise, ID      US  boise-greenbike"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
        "66                  Andria      IT                            andria"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "  'name': 'Mobi'}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1085,17 +1085,17 @@
     {
      "data": {
       "text/plain": [
-       "{'empty_slots': 22,\n",
+       "{'empty_slots': 28,\n",
        " 'extra': {'bank_card': False, 'slots': 35, 'status': 'online', 'uid': '0001'},\n",
-       " 'free_bikes': 13,\n",
+       " 'free_bikes': 7,\n",
        " 'id': '7a19c49f486d7c0c02b3685d7b240448',\n",
        " 'latitude': 49.262487,\n",
        " 'longitude': -123.114397,\n",
        " 'name': '0001 10th & Cambie',\n",
-       " 'timestamp': '2022-12-04T02:49:15.041000Z'}"
+       " 'timestamp': '2022-12-05T04:30:25.850000Z'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "  'name': 'Bike Share Toronto'}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1149,13 @@
     {
      "data": {
       "text/plain": [
-       "{'empty_slots': 9,\n",
+       "{'empty_slots': 12,\n",
        " 'extra': {'address': 'Donlands Station',\n",
        "  'altitude': 0.0,\n",
        "  'ebikes': 0,\n",
        "  'has_ebikes': True,\n",
-       "  'last_updated': 1670122315,\n",
-       "  'normal_bikes': 6,\n",
+       "  'last_updated': 1670214322,\n",
+       "  'normal_bikes': 3,\n",
        "  'payment': ['key', 'transitcard', 'creditcard', 'phone'],\n",
        "  'payment-terminal': True,\n",
        "  'post_code': 'M4J 1P3',\n",
@@ -1163,15 +1163,15 @@
        "  'returning': 1,\n",
        "  'slots': 15,\n",
        "  'uid': '7091'},\n",
-       " 'free_bikes': 6,\n",
+       " 'free_bikes': 3,\n",
        " 'id': '34ec939e3772ab6f8f9be4ae0c98f3a2',\n",
        " 'latitude': 43.681114,\n",
        " 'longitude': -79.3373885,\n",
        " 'name': 'Donlands Station',\n",
-       " 'timestamp': '2022-12-04T02:52:52.541000Z'}"
+       " 'timestamp': '2022-12-05T04:28:57.899000Z'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1298,9 +1298,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7303</td>\n",
-       "      <td>1670180440</td>\n",
+       "      <td>1670214442</td>\n",
        "      <td>Queen St E / Woodward Ave</td>\n",
-       "      <td>2022-12-04T19:03:36.884000Z</td>\n",
+       "      <td>2022-12-05T04:28:57.528000Z</td>\n",
        "      <td>43.665269</td>\n",
        "      <td>-79.319796</td>\n",
        "      <td>fb337bbed72e2be090071e199899b2be</td>\n",
@@ -1320,9 +1320,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7301</td>\n",
-       "      <td>1670180499</td>\n",
+       "      <td>1670214319</td>\n",
        "      <td>Primrose Ave / Davenport Rd</td>\n",
-       "      <td>2022-12-04T19:03:36.885000Z</td>\n",
+       "      <td>2022-12-05T04:28:57.528000Z</td>\n",
        "      <td>43.671420</td>\n",
        "      <td>-79.445947</td>\n",
        "      <td>4ff88d5880e71aa40d34cfe5d09b0ca7</td>\n",
@@ -1342,9 +1342,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7309</td>\n",
-       "      <td>1670180471</td>\n",
+       "      <td>1670214354</td>\n",
        "      <td>Queen St. E / Rhodes Ave.</td>\n",
-       "      <td>2022-12-04T19:03:36.886000Z</td>\n",
+       "      <td>2022-12-05T04:28:57.529000Z</td>\n",
        "      <td>43.666224</td>\n",
        "      <td>-79.317693</td>\n",
        "      <td>a09c67c0b419654d907c9134b108e328</td>\n",
@@ -1352,21 +1352,21 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bond St / Queen St E</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19</td>\n",
        "      <td>4</td>\n",
        "      <td>25</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7045</td>\n",
-       "      <td>1670180586</td>\n",
+       "      <td>1670214437</td>\n",
        "      <td>Bond St / Queen St E</td>\n",
-       "      <td>2022-12-04T19:03:36.891000Z</td>\n",
+       "      <td>2022-12-05T04:28:57.534000Z</td>\n",
        "      <td>43.653236</td>\n",
        "      <td>-79.376716</td>\n",
        "      <td>d6a9daee68070a8b106cfb598d81308c</td>\n",
@@ -1374,21 +1374,21 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Church St / Alexander St</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
        "      <td>15</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7044</td>\n",
-       "      <td>1670180362</td>\n",
+       "      <td>1670214235</td>\n",
        "      <td>Church St / Alexander St</td>\n",
-       "      <td>2022-12-04T19:03:36.892000Z</td>\n",
+       "      <td>2022-12-05T04:28:57.534000Z</td>\n",
        "      <td>43.663722</td>\n",
        "      <td>-79.380288</td>\n",
        "      <td>8f8af40d9388c8a3962559e8681d3db7</td>\n",
@@ -1402,29 +1402,29 @@
        "0    Queen St E / Woodward Ave          18            1     19       0.0   \n",
        "1  Primrose Ave / Davenport Rd           6            8     15       0.0   \n",
        "2    Queen St. E / Rhodes Ave.           9           13     23       0.0   \n",
-       "3         Bond St / Queen St E          20            4     25       0.0   \n",
-       "4     Church St / Alexander St           1           11     15       0.0   \n",
+       "3         Bond St / Queen St E          19            4     25       0.0   \n",
+       "4     Church St / Alexander St           8            4     15       0.0   \n",
        "\n",
        "   ebikes  has_ebikes  normal_bikes                                payment  \\\n",
        "0       0        True            18  [key, transitcard, creditcard, phone]   \n",
        "1       0        True             6  [key, transitcard, creditcard, phone]   \n",
        "2       0        True             9  [key, transitcard, creditcard, phone]   \n",
-       "3       0        True            20  [key, transitcard, creditcard, phone]   \n",
-       "4       0        True             1  [key, transitcard, creditcard, phone]   \n",
+       "3       0        True            19  [key, transitcard, creditcard, phone]   \n",
+       "4       2        True             6  [key, transitcard, creditcard, phone]   \n",
        "\n",
        "   payment-terminal  renting  returning   uid  last_updated  \\\n",
-       "0              True        1          1  7303    1670180440   \n",
-       "1              True        1          1  7301    1670180499   \n",
-       "2              True        1          1  7309    1670180471   \n",
-       "3              True        1          1  7045    1670180586   \n",
-       "4              True        1          1  7044    1670180362   \n",
+       "0              True        1          1  7303    1670214442   \n",
+       "1              True        1          1  7301    1670214319   \n",
+       "2              True        1          1  7309    1670214354   \n",
+       "3              True        1          1  7045    1670214437   \n",
+       "4              True        1          1  7044    1670214235   \n",
        "\n",
        "                       address                    timestamp   latitude  \\\n",
-       "0    Queen St E / Woodward Ave  2022-12-04T19:03:36.884000Z  43.665269   \n",
-       "1  Primrose Ave / Davenport Rd  2022-12-04T19:03:36.885000Z  43.671420   \n",
-       "2    Queen St. E / Rhodes Ave.  2022-12-04T19:03:36.886000Z  43.666224   \n",
-       "3         Bond St / Queen St E  2022-12-04T19:03:36.891000Z  43.653236   \n",
-       "4     Church St / Alexander St  2022-12-04T19:03:36.892000Z  43.663722   \n",
+       "0    Queen St E / Woodward Ave  2022-12-05T04:28:57.528000Z  43.665269   \n",
+       "1  Primrose Ave / Davenport Rd  2022-12-05T04:28:57.528000Z  43.671420   \n",
+       "2    Queen St. E / Rhodes Ave.  2022-12-05T04:28:57.529000Z  43.666224   \n",
+       "3         Bond St / Queen St E  2022-12-05T04:28:57.534000Z  43.653236   \n",
+       "4     Church St / Alexander St  2022-12-05T04:28:57.534000Z  43.663722   \n",
        "\n",
        "   longitude                                id  \n",
        "0 -79.319796  fb337bbed72e2be090071e199899b2be  \n",
@@ -1434,7 +1434,7 @@
        "4 -79.380288  8f8af40d9388c8a3962559e8681d3db7  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
        "(655, 19)"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,23 +1479,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 232,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "  df.to_csv(f'../data/ctyBks_csv/df_ctybks_{cityName}({datetime.now()}).csv', index = False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1494,7 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
-      "2022-12-03T22:57:20.835000Z\n"
+      "2022-12-05T04:28:57.680000Z\n"
      ]
     }
    ],
