Updates, new data and added model building

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +40,18 @@
     "# Save working copies:\n",
     "dfcb = df_ctyBks.copy()\n",
     "\n",
-    "df_yelp = pd.read_csv('../data/stats_mod/df_yelp_sun2326h.csv')\n",
+    "df_yelp = pd.read_csv('../data/stats_mod/df_yelp_mon1130h.csv')\n",
     "# Save working copies:\n",
     "dfy = df_yelp.copy()\n",
     "\n",
-    "df_fsq = pd.read_csv('../data/stats_mod/df_fsq_sun2311h.csv')\n",
+    "df_fsq = pd.read_csv('../data/stats_mod/df_fsq_mon1130h.csv')\n",
     "# Save working copies:\n",
     "dff = df_fsq.copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "2  a09c67c0b419654d907c9134b108e328  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "1  4ff88d5880e71aa40d34cfe5d09b0ca7  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,11 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfcb.to_csv('../data/ctyBks_csv/df_ctyBks_sun2337h')"
+    "# dfcb.to_csv('../data/ctyBks_csv/df_ctyBks_sun2337h')\n",
+    "dfcb[['latitude', 'longitude', 'uid']].to_csv('../data/toronto_stations_for_map.csv', index=False)"
    ]
   },
   {
@@ -2642,12 +2643,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fsqStns.to_csv('../data/stats_mod/df_fsqStns_2330h.csv')\n",
-    "df_yelpStns.to_csv('../data/stats_mod/df_yelpStns_2330h.csv')"
+    "df_fsqStns.to_csv('../data/stats_mod/df_fsqStns_2330h.csv', index=False)\n",
+    "df_yelpStns.to_csv('../data/stats_mod/df_yelpStns_2330h.csv', index=False)"
    ]
   },
   {
