--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -2696,7 +2696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2710,7 +2710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
