Title typo edit

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# W3P2 - PART4 - city_bikes\n",
+    "# W3P2 - PART4 - Joining Data\n",
     "\n",
     "assignment file part 3\n",
     "\n",
