updated functions with docstrings

--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import json\n",
     "from datetime import datetime\n",
-    "import pytz "
+    "import pytz"
    ]
   },
   {
@@ -335,11 +335,11 @@
    ],
    "source": [
     "ctyBks_services = []\n",
-    "for i in range(num_of_networks): \n",
+    "for i in range(num_of_networks):\n",
     "    city = ctyBks['networks'][i]['location']['city']\n",
     "    country = ctyBks['networks'][i]['location']['country']\n",
     "    id = ctyBks['networks'][i]['id']\n",
-    "    \n",
+    "\n",
     "    ctyBks_services.extend([{'city': city, 'country': country, 'id': id}])\n",
     "\n",
     "ctyBksServiceSites = pd.DataFrame(ctyBks_services)\n",
@@ -465,7 +465,7 @@
     "ctyBks_CA = []\n",
     "for i in range(num_of_networks):\n",
     "  if ctyBks['networks'][i]['location']['country'] == 'CA':\n",
-    "    \n",
+    "\n",
     "    ctyBks_CA.append(ctyBks['networks'][i])\n"
    ]
   },
@@ -514,7 +514,7 @@
     "canadian_ntwrks = []\n",
     "for i in range(num_of_networks):\n",
     "  if ctyBks['networks'][i]['location']['country'] == 'CA':\n",
-    "    \n",
+    "\n",
     "    canadian_ntwrks.append(ctyBks['networks'][i])\n"
    ]
   },
@@ -564,18 +564,33 @@
    "outputs": [],
    "source": [
     "def ctyBksCityCountry_df(CCode):\n",
+    "    \"\"\"\n",
+    "  Retrieve city bike network information for a specific country code.\n",
     "\n",
+    "  Parameters:\n",
+    "      CCode (str): The ISO 3166-1 alpha-2 country code for the country of interest.\n",
+    "\n",
+    "  Returns:\n",
+    "      DataFrame: A pandas DataFrame containing information about city bike networks in the specified country,\n",
+    "                  including the city name, country name, and network ID.\n",
+    "\n",
+    "  Notes:\n",
+    "      This function queries the Citybik.es API to retrieve information about available city bike networks worldwide.\n",
+    "      It filters the networks based on the provided country code (ISO 3166-1 alpha-2), extracting the city name,\n",
+    "      country name, and network ID for each network in the specified country. The function then returns this\n",
+    "      information as a pandas DataFrame sorted by city name.\n",
+    "  \"\"\"\n",
     "  ctyBks = requests.get('https://api.citybik.es/v2/networks').json()\n",
     "  num_of_networks = len(ctyBks['networks'])\n",
     "\n",
     "  ctyBks_CCode = []\n",
     "  for i in range(num_of_networks):\n",
     "    if ctyBks['networks'][i]['location']['country'] == CCode:\n",
-    "  \n",
+    "\n",
     "      city = ctyBks['networks'][i]['location']['city']\n",
     "      country = ctyBks['networks'][i]['location']['country']\n",
     "      id = ctyBks['networks'][i]['id']\n",
-    "      \n",
+    "\n",
     "      ctyBks_CCode.extend([{'city': city, 'country': country, 'id': id}])\n",
     "\n",
     "  ctyBks_CCode_sites = pd.DataFrame(ctyBks_CCode).sort_values('city')\n",
@@ -1010,8 +1025,18 @@
     "\n",
     "def ctyBks_cityData(cityName):\n",
     "  \"\"\"\n",
-    "  input: Case insensitive string format of a city name, \n",
-    "  output: [{dictionary}] from citybik.es API pertaining to the input city.\n",
+    "  Retrieve city bike network data for a specific city.\n",
+    "\n",
+    "  Parameters:\n",
+    "      cityName (str): The name of the city for which bike network data is to be retrieved.\n",
+    "\n",
+    "  Returns:\n",
+    "      list: A list containing information about city bike networks in the specified city.\n",
+    "\n",
+    "  Notes:\n",
+    "      This function queries the Citybik.es API to retrieve information about available city bike networks worldwide.\n",
+    "      It filters the networks based on the provided city name, extracting information about networks located in the\n",
+    "      specified city. The function then returns this information as a list.\n",
     "  \"\"\"\n",
     "  ctyBksCity = str(cityName).lower()\n",
     "\n",
@@ -1022,14 +1047,24 @@
     "  for i in range(num_of_networks):\n",
     "    if ctyBksCity in ctyBks['networks'][i]['location']['city'].lower():\n",
     "      cityData.append(ctyBks['networks'][i])\n",
-    "  \n",
+    "\n",
     "  return cityData\n",
     "\n",
     "\n",
     "def ctyBks_cityStations(cityName):\n",
     "  \"\"\"\n",
-    "  input: Case insensitive string format of a city name,\n",
-    "  output: .json() get.request response from citybik.es API all stations to the input City.\n",
+    "  Retrieve station data for a specific city bike network.\n",
+    "\n",
+    "  Parameters:\n",
+    "      cityName (str): The name of the city for which station data is to be retrieved.\n",
+    "\n",
+    "  Returns:\n",
+    "      list: A list containing information about bike stations in the specified city bike network.\n",
+    "\n",
+    "  Notes:\n",
+    "      This function calls the `ctyBks_cityData` function to retrieve information about the city bike network\n",
+    "      corresponding to the provided city name. It then extracts the network address from the retrieved data and\n",
+    "      constructs the API URL to fetch station data. Finally, it retrieves and returns the station data as a list.\n",
     "  \"\"\"\n",
     "  cityStations = ctyBks_cityData(cityName)\n",
     "\n",
@@ -1197,6 +1232,21 @@
    "outputs": [],
    "source": [
     "def stationDataFrame(cityName):\n",
+    "  \"\"\"\n",
+    "  Create a pandas DataFrame containing information about bike stations in a specific city.\n",
+    "\n",
+    "  Parameters:\n",
+    "      cityName (str): The name of the city for which bike station data is to be retrieved.\n",
+    "\n",
+    "  Returns:\n",
+    "      DataFrame: A pandas DataFrame containing information about bike stations in the specified city.\n",
+    "\n",
+    "  Notes:\n",
+    "      This function calls the `ctyBks_cityStations` function to retrieve information about bike stations\n",
+    "      in the specified city. It then iterates over the station data, extracting relevant information for\n",
+    "      each station and organizing it into a dictionary. Finally, it constructs a pandas DataFrame from\n",
+    "      the list of dictionaries and returns it.\n",
+    "  \"\"\"\n",
     "  data = ctyBks_cityStations(cityName)\n",
     "  df_list = []\n",
     "  for i in data:\n",
